@@ -197,3 +197,4 @@
 ( cvs diff -u -r 1.1.2.18 -r 1.1.2.19 src/day-view.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/icaltime_as_local.c;  cvs diff -u -r 1.1.2.18 -r 1.1.2.19 src/month-view.c;  cvs diff -u -r 1.2.2.101 -r 1.2.2.102 src/vcal_folder.c;  cvs diff -u -r 1.1.2.74 -r 1.1.2.75 src/vcal_manager.c;  cvs diff -u -r 1.1.2.80 -r 1.1.2.81 src/vcal_meeting_gtk.c;  ) > 2.0.0cvs16.patchset
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/claws.def;  cvs diff -u -r 1.1.2.75 -r 1.1.2.76 src/vcal_manager.c;  cvs diff -u -r 1.1.2.81 -r 1.1.2.82 src/vcal_meeting_gtk.c;  cvs diff -u -r 1.2.2.81 -r 1.2.2.82 src/vcalendar.c;  ) > 2.0.0cvs17.patchset
 ( cvs diff -u -r 1.2.2.102 -r 1.2.2.103 src/vcal_folder.c;  ) > 2.0.0cvs18.patchset
+( cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/day-view.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/icaltime_as_local.c;  cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/month-view.c;  cvs diff -u -r 1.2.2.103 -r 1.2.2.104 src/vcal_folder.c;  cvs diff -u -r 1.1.2.76 -r 1.1.2.77 src/vcal_manager.c;  cvs diff -u -r 1.1.2.82 -r 1.1.2.83 src/vcal_meeting_gtk.c;  ) > 2.0.0cvs19.patchset
